# featureflip-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/featureflip/: __init__.py  _core.py  _events.py  _http.py  _polling.py  _semver.py  _streaming.py  client.py  config.py  context.py  detail.py  evaluation.py  exceptions.py  models.py
tests/: __init__.py  test_client.py  test_config.py  test_context.py  test_core.py  test_detail.py  test_evaluation.py  test_events.py  test_exceptions.py  test_factory.py  test_http.py  test_models.py  test_polling.py  test_semver.py  test_streaming.py
tests/integration/: __init__.py  test_api.py
